# To-Do-List

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
src/: main.cpp
src/controller/: TaskController.cpp  TaskController.h
src/logger/: logger.cpp  logger.hpp
src/model/: Task.cpp  Task.h  TaskList.cpp  TaskList.h
src/view/: MainFrame.cpp  MainFrame.h  TaskDialog.cpp  TaskDialog.h  TaskPanel.cpp  TaskPanel.h
